--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 </head>
 <body>
 
+    <a href="#inicio">
+        <img src="./assets/arrow-up-square.svg" id="flechaArriba" alt="flecha-arriba">
+</a>
+
 
     <header class="header">
         <h1 class="h1">
@@ -30,9 +34,9 @@
 
      
     <main class="main">
-        <section class="inicio">
-            <img class="img" src="/assets/LOGO_EVENTS_SIN_FONDO.png" alt="logo">
+        <section class="inicio" id="inicio">
             <h1 class="h1">SONIDO E ILUMINACIÓN PARA TU EVENTO</h1>
+            <img class="img" src="/assets/LOGO_EVENTS_SIN_FONDO.png" alt="logo">
             
         </section>
 
