--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <img src="./assets/arrow-up-square.svg" id="flechaArriba" alt="flecha-arriba">
 </a>
 
+    
+
 
     <header class="header">
         <h1 class="h1">
@@ -34,6 +36,7 @@
 
      
     <main class="main">
+        <h1 class="h1">holi</h1>
         <section class="inicio" id="inicio">
             <h1 class="h1">SONIDO E ILUMINACIÓN PARA TU EVENTO</h1>
             <img class="img" src="/assets/LOGO_EVENTS_SIN_FONDO.png" alt="logo">
